# grip-dev

./: .gitignore  .gitmodules  README.md  requirements.txt
dev-setup/: requirements.txt
dev-setup/src/: requirements.txt
dev-setup/src/collect_dependencies/: collect_dependencies.py
dev-setup/src/run_glial_stack/: run_glial_stack.py
docs/: GLIAL_RUNTIME_MODEL.md  GLIAL_SYSTEM_SPEC.md  GRIPPY_SPEC.md  GRIP_PY_DESIGN_SPEC.md  GRIP_PY_DRIP_PROPOSAL.md  GRIP_PY_GROK_CONTEXT_SPEC.md  GRIP_PY_TAP_SPEC.md  infofraphic.html
docs/glial/: GLIAL_NEXT_ISSUES.md  GLIAL_RESOLUTIONS.md  V0.2 Architecture Proposal_ Grip & Glial Session Persistence and Synchronization.md  grip_glial_architecture_questions.md
docs/old-glial/: GLIAL_USE_CASES.md
glial-control-py/: AGENTS.md  README.md  pyproject.toml
glial-control-py/src/glial_control/: __init__.py  cli.py
glial-control-py/tests/: test_cli.py
glial-local-py/: .gitignore  AGENTS.md  README.md  pyproject.toml
glial-local-py/src/glial_local/: __init__.py  filesystem_store.py  in_memory.py  session_browser.py  types.py
glial-local-py/tests/: test_filesystem_store.py  test_persistence.py
glial-local-ts/: AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
glial-local-ts/src/: in_memory.ts  index.ts  indexeddb_store.ts  session_browser.ts  types.ts
glial-local-ts/tests/: indexeddb_store.spec.ts  persistence.spec.ts
glial-net-py/: AGENTS.md  README.md  pyproject.toml
glial-net-py/src/glial_net/: __init__.py  client.py
glial-net-py/tests/: test_client.py
glial-net-ts/: AGENTS.md  README.md  package-lock.json  package.json
glial-net-ts/src/: client.ts  index.ts
glial-net-ts/tests/: client.spec.ts
glial-router-py/: AGENTS.md  README.md  pyproject.toml
glial-router-py/src/glial_router/: __init__.py  app.py  coordinator.py  live_hub.py  models.py  remote_store.py
glial-router-py/tests/: test_app.py
glial-viewer-ts/: AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
glial-viewer-ts/src/: App.test.tsx  App.tsx  main.tsx  viewer_runtime.ts
(+29 files in other folders)
