[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "glial-net-py"
version = "0.1.0"
description = "Client-side Glial protocol helpers for Python runtimes."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Gianni Mariani", email = "gianni@mariani.ws" },
]
dependencies = [
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/glial_net",
]
