[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "glial-router-py"
version = "0.1.0"
description = "FastAPI-based Glial router and session coordinator."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Gianni Mariani", email = "gianni@mariani.ws" },
]
dependencies = [
    "fastapi>=0.116.0",
    "pydantic>=2.11.0",
    "uvicorn>=0.35.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/glial_router",
]
